#368 notecard alignment fix

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -175,6 +175,14 @@
 
       dd {
         margin-bottom: 1rem;
+
+        .notecard {
+          margin-left: 1rem;
+
+          p {
+            padding-left: 0;
+          }
+        }
       }
 
       p {
